// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicKey should copy public key 1`] = `
<View>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#7D675E",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
          "textTransform": "lowercase",
        },
      ]
    }
  >
    account pubkey
    :
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#2B1911",
            "flexShrink": 1,
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "color": "#F56522",
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.14,
              "lineHeight": 22,
            },
          ]
        }
      >
        02adcf3c
      </Text>
      857078dc3ca7064a49d20c6ae4978809057ffb75dc0750d8b5020aafe9
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "marginLeft": 12,
        }
      }
    >
      <View
        accessibilityHint="copy"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        />
      </View>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "color": "#F56522",
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.14,
              "lineHeight": 22,
            },
          ]
        }
      >
        copied!
      </Text>
    </View>
  </View>
</View>
`;

exports[`PublicKey should render correctly 1`] = `
<View>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#7D675E",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
          "textTransform": "lowercase",
        },
      ]
    }
  >
    account pubkey
    :
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#2B1911",
            "flexShrink": 1,
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "color": "#F56522",
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.14,
              "lineHeight": 22,
            },
          ]
        }
      >
        02adcf3c
      </Text>
      857078dc3ca7064a49d20c6ae4978809057ffb75dc0750d8b5020aafe9
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "marginLeft": 12,
        }
      }
    >
      <View
        accessibilityHint="copy"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
